# python-fastapi-lambda-web-adapter

./: Dockerfile  README.md  buildspec.yml  compose.yml  pyproject.toml
