[tool.poetry]
name = "python-fastapi-lambda-web-adapter"
version = "0.1.0"
description = ""
authors = ["t-okuji <t.okuji34@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
